# Packer_Development

./: LICENSE  README.md
.devcontainer/: Dockerfile  devcontainer.json
C/: README.md  pack.py
C/src/: defines.h  main.c
C/src/auxiliary/: Gate.asm  helpers.h  peb.h  syscalls.h
C/src/debug/: debug_peb.h
C/src/evasion/: patch_amsi_etw.h
C/src/execution/: dotnet.h  runpe.h
C/src/sandbox/: domain.h
Nim/: README.md  packertemplate.nim  template.nim
Nim/AMSIETWBypass/: AMSIETWdisable.nim
Nim/antidebug/: antidebug.nim
Nim/assemblyLoad/: assemblyLoad.nim
Nim/dll/: library.nim
Nim/encrypt/: encryptdecrypt.nim
Nim/peload/: peload.nim
Nim/sandbox/: Delay.nim  DomainJoin.nim
Nim/shellcodeexecute/: execute.nim
Rust/: Cargo.toml  README.md  packertemplate.rs  template.rs
Rust/AMSIETWBypass/: AMSIETWdisable.rs
Rust/antidebug/: antidebug.rs
Rust/assemblyLoad/: assemblyLoad.rs
Rust/dll/: library.rs
Rust/encrypt/: encryptdecrypt.rs
Rust/loader/: Cargo.toml
Rust/peload/: peload.rs
Rust/sandbox/: Delay.rs  domainjoin.rs
Rust/shellcodeexecute/: execute.rs
