[package]
name = "x33fpack"
version = "0.0.1"
author = "x33fc0n"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = "z"     # Optimize for size.
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
panic = "abort"     # Abort on panic
strip = true        # Automatically strip symbols from the binary.

[dependencies]
obfstr = "0.3.0"
memoffset = "0.6"
widestring = "0.5.1"
rand = "0.8"
clroxide = "1.1.1"
rust_syscalls = {git = "https://github.com/janoglezcampos/rust_syscalls", features = ["_INDIRECT_"]}
rspe = { git = "https://github.com/Thoxy67/rspe"}

[dependencies.windows]
version = "0.54"
features = [
    "Win32_System_SystemInformation",
    "Win32_System_Threading",
    "Win32_System_Memory",
    "Win32_System_SystemServices",
    "Win32_System_LibraryLoader",
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
]

[features]
messagebox = []
calculation = []
embedded = []
payloadFile = []